--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>my-vue-sell</title>
   <!--定义移动端的宽高-->
   <meta name="viewport"
-        content="wodth=device-width, initial-scale=1.0, maximum-scale=1.0, minimun-scale=1.0, user-scalable=no">
+        content="wodth=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   <!--引入重置的样式表-->
   <link rel="stylesheet" type="text/css" href="static/css/reset.css">
 </head>
